@@ -9,6 +9,8 @@ TBD
 - Fixed #26 - Px doesn't attach to powershell console
 - Allow Px to work with pythonw.exe - console output and stdout crash
 - Fix Python 2.x crashes in quit()
+- Fixed issue #22 - support for Kerberos authentication
+- Removed pywin32 option since it doesn't work for Kerberos auth
 
 v0.3.0 - 2018-02-19
 - Fixed issue 9 - Added support for winkerberos to workaround pywin32 bug
